...
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_button"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="fab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
...
