...
        android:textSize="20sp" />

    <TextView
        android:id="@+id/medicine_edit_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medicine_edit_name"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/android_blue"
        android:textSize="13sp" />
...
