...
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/med_presentation_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:adjustViewBounds="false"
                android:alpha="1"
...
